# micmute

./: Cargo.toml  LICENSE  README.md
micmute/: Cargo.toml
micmute/src/: error.rs  main.rs
