[package]
name = "micmute"
version = "0.1.0"
authors = ["Aziroshin <aziroshin@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"

[lib]
name = "micmute_lib"
path = "src/lib.rs"

[[bin]]
name = "micmute"
path = "src/main.rs"